--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
     <div id="divfirework"><canvas id="canvasfirework" ></canvas></div>
-    <link rel="stylesheet" type="text/css" href="css/firework.css">
-    <script src= "js/firework.js"></script>
+    <!-- 这里是直接预览的,部署到网页上时需要一点更改，详见README.md -->
+    <link rel="stylesheet" type="text/css" href="css/firework.css"><!-- 实际使用时要在css前加`/` -->
+    <script src= "js/firework.js"></script><!-- 实际使用时要在js前加`/` -->
 </body>
 </html>
